--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/log.css">
     <link rel="stylesheet" href="/css/products.css">
     
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <title>Turisteando</title>
 </head>
