--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,17 +1,21 @@
 *{box-sizing: border-box;}
 
+/* Clases generales */
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
     
   }
-h1.estilo{
-    padding: 20px 0;
-    color:white;
-    background-color:rgb(61, 89, 165);
-    background-size: 10px;
-    font-size: 35px;
-    text-align: center
- 
+
+/* centro de la pagina con bordes blancos */
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+a {
+    color: black;
+    text-decoration: none;
 }
 
 h2{
@@ -38,6 +42,8 @@ h2{
         border-radius: var(--default-padding);
         overflow: hidden;
     }
+
+    
 
     @media (min-width: 600px) {
         .pic-item {
