--- a/public/css/paquetes.css
+++ b/public/css/paquetes.css
@@ -1,13 +1,8 @@
-* {
-    box-sizing: content-box;
-}
-
-
 body {
     font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
     
   }
-
+/* PONE TODO EN COLUMNA */
 .container1 {
     padding: 60px 0;
     width: 90%;
@@ -15,7 +10,6 @@ body {
     margin: auto;
     overflow: hidden;
     text-align: center;
- 
     flex-direction: row;
 }
 
