--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,11 +1,3 @@
-* { box-sizing: border-box; }
-
-
-body {
-    font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
-    
-  }
-
  
 .header {
     font-size: 20px;
@@ -16,9 +8,9 @@ body {
   
 a   {
       color: black;
-      text-transform:uppercase;
-      font-weight: bold;
-      font-size: 20px;
+      /* text-transform:uppercase;*/ 
+      /*  font-weight: bold;*/
+      font-size: 25px;
   }
 
 .color-h3{
