--- a/src/views/admin/lista.ejs
+++ b/src/views/admin/lista.ejs
@@ -17,6 +17,7 @@
 
         <ul>   
             <h2>Detalle de paquetes</h2>
+            <div class="container">
             <hr>
             <div class='products'>
                 <%products.forEach(product => { %>
@@ -57,7 +58,7 @@
             </div>
            
         </ul>
-
+    </div>
     </main>
     <footer>
         <%- include('../partials/footer.ejs') %>
