--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -10,7 +10,7 @@
     </header>
 
 
-
+    <div class="container">
     <div class="product-container">
         <h2>Detalle de productos: <%= product.title %></h2>
        
@@ -56,7 +56,7 @@
        
         </div>
         <br>
-       
+    </div>   
     </div> 
     
 </div>
