--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -6,30 +6,29 @@
 
 <header> 
     <%- include('../partials/header.ejs') %>  
+   
 </header>
 
 <body>
     <div class="container">
-<section >
+    <section>
     <!-- login div -->
-<div class="login">
+    <div class="login">
     <!-- login header -->
     
-      <h1 id="header">Ingresá con tu email y contraseña</h1>
-      <form id="form" action="/login" method="POST"><!--probe con userList y no  anda -->
-        
-        <!--antes estaba nombreUsuario y toda su categoria-->
+    <h1 id="header">Ingresá con tu email y contraseña</h1>
+    <form id="form" action="/login" method="POST">
+       <!--antes estaba nombreUsuario y toda su categoria-->
        <!-- <div class="nombreUsuario">
              <label for="nombre"><i class="fas fa-user">Nombre Usuario:</i> </label>
              <input type="text" name="nombre-usuario" id="nombre" placeholder="Ingrese nombre de usuario aquí">
         </div>-->
         <!--llega hasta aca-->
-
         <!--EMAIL ES LO NUEVO-->
-        <div class="field">
-            <label for="email">Email</label>
+        <div class="email">
+            <label for="email"><i class="fas fa-user "></i> Email</label>
             <div class="control">
-                <input type="text" name="email" id="email" value="<%= locals.old && old.email ? old.email : '' %>">
+                <input type="text" name="email" id="email" placeholder="juan@ejemplo.com" value="<%= locals.old && old.email ? old.email : '' %>">
             </div>
             <% if (locals.errors && errors.email) { %>
                 <p class="feedback is-danger"><%= errors.email.msg %></p>
@@ -42,47 +41,45 @@
              <label for="clave"><i class="fas fa-key"></i> Contraseña:</label>
              <input type="password" name="clave" id="clave" placeholder="Ingrese su contraseña aquí">
         </div>-->
+        <!--AHORA ES ESTO-->
 
+        <div class="password">
+            <label for="password"><i class=" fas fa-key "></i> Password</label>
+            <div class="control">
+               <input type="password" name="password" id="password" placeholder="">
+            </div>
+             <% if (locals.errors && errors.password) { %>
+             <p class="feedback is-danger"><%= errors.password.msg %></p>
+             <% } %>
+        </div>
 
-
-<!--AHORA ES ESTO-->
-
-
-<div class="field">
-    <label for="password">Password</label>
-    <div class="control">
-        <input type="password" name="password" id="password">
-    </div>
-    <% if (locals.errors && errors.password) { %>
-        <p class="feedback is-danger"><%= errors.password.msg %></p>
-    <% } %>
-</div>
-
-
-
-<!--HASTA ACA 
-y aca poner el if de errores para poder validar en value el old.name-->
-        <div class="user-type">
+        <!--HASTA ACA y aca poner el if de errores para poder validar en value el old.name-->
+    
+     <div class="user-type">
             <p>Perfil de usuario:</p>
-            <label>
-                <input type="checkbox" name="2" value="2"> Viajero
-            </label>
-            <label>
-                <input type="checkbox" name="1"  value="1" > Administrador
-            </label>
+         
+                <input type="checkbox" name="2" value="2" /> Viajero
+                <br />
+                <input type="checkbox" name="1"  value="1" /> Administrador
+                <br />
+           
+           <div class="reset-password">
+               <a href="#"> Olvide mi contraseña?</a>
+           </div>
+           <br>
             <div class="row">
                 <input type="submit" value="Ingresa" >
             </div>
-            </div>
         </div>
         
+    </form>  
 </section>
 
 
 
-    <footer>
-         <%- include('../partials/footer.ejs') %>
-    </footer>
+<footer>
+    <%- include('../partials/footer.ejs') %>
+</footer>
    
 </body>
 </html>
