--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -6,6 +6,7 @@
 </head>
 <body>
     <%- include('../partials/header.ejs') %>
+  
     
     <main>
         <div class="container">
@@ -51,7 +52,7 @@
                             <div class="field">
                                 <label for="image">Imagen de perfil</label>
                                 <div class="control">
-                                    <input type="file" name="image" id="image">
+                                    <input type="file" accept=".jpg, .jpeg, .png" name="image" id="image" default="/">
                                 </div>
                                 <p class="feedback"></p>
                             </div>
