--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -57,11 +57,16 @@
     
      <div class="user-type">
             <p>Perfil de usuario:</p>
+            <div class="field">
+                <label for="category">Categoría</label>
+                <div class="control">
+                    <select name="category_id" id="category_id">
+                        <option value="">Seleccione una opción</option>
+                        <option name="2" value="2">Viajero</option>
+                        <option name="1" value="1">Administrador</option>
+                    </select>
+                </div>
          
-                <input type="checkbox" name="2" value="2" /> Viajero
-                <br />
-                <input type="checkbox" name="1"  value="1" /> Administrador
-                <br />
            
            <div class="reset-password">
                <a href="#"> Olvide mi contraseña?</a>
