--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -57,14 +57,31 @@
                                 </div>
                                 <p class="feedback"></p>
                             </div>
+                            <div class="field">
+                                <label for="country">Selecciona tu país</label>
+                                <div class="row">
+                                    <label for="country">País</label>
+                                    <select name="country" id="country" required>
+                                        <option value="">Selecciona un país</option>
+                                        <option value="arg" <%= users.country == 'arg' ? 'selected' : 'arg'; %>>Argentina</option>
+                                        <option value="bra" <%= users.country == 'bra' ? 'selected' : 'bra'; %> >Brasil</option>
+                                        <option value="chi" <%= users.country == 'chi' ? 'selected' : 'chi'; %> >Chile</option>
+                                        <option value="col" <%= users.country == 'col' ? 'selected' : 'col'; %> >Colombia</option>
+                                        <option value="per" <%= users.country == 'per' ? 'selected' : 'per'; %> >Perú</option>
+                                        <option value="uru" <%= users.country == 'uru' ? 'selected' : 'uru'; %> >Uruguay</option>
+                                        <option value="par" <%= users.country == 'par' ? 'selected' : 'par'; %>>Paraguay</option>
+                                        <option value="otr"<%= users.country == 'otr' ? 'selected' : 'otr'; %>>Otros</option>
+                                    </select>
+                                </div>
+<br>
 
                             <div class="field">
                                 <label for="category">Categoría</label>
                                 <div class="control">
-                                    <select name="category" id="category">
+                                    <select name="category_id" id="category_id">
                                         <option value="">Seleccione una opción</option>
-                                        <option value="Administrador" <%= users.category == 'Administrador' ? 'selected' : ''; %>>Administrador</option>
-                                        <option value="Viajero" <%= users.category == 'Viajero' ? 'selected' : ''; %>>Viajero</option>
+                                        <option value="1" <%= users.category_id == '1' ? 'selected' : '1'; %>>Administrador</option>
+                                        <option value="2" <%= users.category_id == '2' ? 'selected' : '2'; %>>Viajero</option>
                                     </select>
                                 </div>
                                 <p class="feedback"></p>
