--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -66,7 +66,7 @@
                             </div>
 
                             <div class="field">
-                                <label for="category">Selecciona tu país</label>
+                                <label for="country">Selecciona tu país</label>
                                 <div class="row">
                                     <label for="country">País</label>
                                     <select name="country" id="country" required>
