--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -30,13 +30,13 @@
     </div>
 
     <div class="field">
-        <label for="image">Imagen</label>
-     
-
+        
+        <h3> Foto actual: </h3><img width="15%" src="/images/destinos/<%= product.image %>" alt="">
+<!--  -->
         <div>
             <input type="file" name="image" id="image" value="<%= product.image %>">
-
         </div>
+<!--  -->        
     </div>  
 
     <div class="field">
