--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,10 +22,13 @@
        
     </div>
     <section>
-    <h3 class="color-h3">Elegi tu próximo destino</h3>
+      
+    <h3 class="color-h3">Elegí tu próxima aventura</h3>
     
     <br>
-
+    
+    <%- include('partials/cotizacion.ejs') %>
+    <hr>
 
 <br>
 </section>
