--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,7 +10,7 @@
 
       <div class="header header-right">
           <nav>
-            <h3 class="color-h3"> Bienvenido <%= ( user ? user.first_name : "visitante") %> <i class="fas fa-plane-departure"></i></h3>
+            <h3 class="color-h3"> Bienvenido:  <%= ( user ? user.first_name : "visitante") %> <i class="fas fa-plane-departure"></i></h3>
             <span class="separador">|
             <a href="/">Inicio</a>
             <span class="separador">|
