--- a/src/views/notAllowed.ejs
+++ b/src/views/notAllowed.ejs
@@ -2,16 +2,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('../partials/head.ejs') %>
+    <%- include('partials/head.ejs') %>
 </head>
 <body>
-    <%- include('../partials/header.ejs') %>
+    <%- include('partials/header.ejs') %>
 
-    <h1>Seccion restringida</h1>
+    <h1 style = "color: black;">Seccion restringida - ingresa como administrador </h1>
 
-
+    
     <footer>
-        <%- include('../partials/footer.ejs') %>
+        <%- include('partials/footer.ejs') %>
         </footer>
         </body>
         </html>
