--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,7 +13,7 @@
    
        <li> <a href="/index-admin">Sección para administradores</a></ul>
 
-        <li><a href="/user/<%= ( user ? user.id : "login") %> "> Tu perfil de usuario </a> </li>
+        <li><a href="/user/<%= ( user ? user.id : "../login") %> "> Tu perfil de usuario </a> </li>
         </ul>
         <h2> Turisteando es la pagina que estabas buscando para empezar tus vacaciones por Argentina </h2>
         <br>
