--- a/src/views/partials/cotizacion.ejs
+++ b/src/views/partials/cotizacion.ejs
@@ -5,11 +5,11 @@
     </span>
 
     <span>
-        DOLAR BLUE: <%= locals.exchange ? exchange.blue : 'N/A' %> 💸
+       | DOLAR BLUE: <%= locals.exchange ? exchange.blue : 'N/A' %> 💸
     </span>
 
     <span>
-        DOLAR TURISTA: <%= locals.exchange ? exchange.turista : 'N/A' %> 🏖️
+       | DOLAR TURISTA: <%= locals.exchange ? exchange.turista : 'N/A' %> 🏖️
     </span>
 
 </marquee>
