--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -60,17 +60,13 @@
             <div class="field">
                 <label for="category">Categoría</label>
                 <div class="control">
-                    <select name="category_id" id="category_id">
+                    <select name="category_id" id="category_id" >
                         <option value="">Seleccione una opción</option>
                         <option name="2" value="2">Viajero</option>
                         <option name="1" value="1">Administrador</option>
                     </select>
                 </div>
          
-           
-           <div class="reset-password">
-               <a href="#"> Olvide mi contraseña?</a>
-           </div>
            <br>
             <div class="row">
                 <input type="submit" value="Ingresa" >
@@ -78,10 +74,17 @@
         </div>
         
     </form>  
+    <form action ="/login" >
+    <p><input type="submit" href="#" value="Olvidé la contraseña"></p>
+    </form> 
+    <br>
+    
 </section>
 
 
-
+<form action ="/register" >
+    <p><input type="submit" value="No tenes cuenta? Registrate acá!"></p>
+    </form> 
 <footer>
     <%- include('../partials/footer.ejs') %>
 </footer>
