--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -13,15 +13,16 @@
             <section>
                 <div class="columns is-centered">
                     <div class="column is-6">
+                        <hr>
+                        <h1 style="color: black;">Registrate acá!</h1>
                         
-                        <h1>Nuevo usuario</h1>
 
                         <form action="/users" method="POST" enctype="multipart/form-data">
-
+                           
                             <div class="field">
                                 <label for="first_name">Nombre</label>
                                 <div class="control">
-                                    <input type="text" name="first_name" id="first_name" value="">
+                                    <input type="text" name="first_name" id="first_name" value="<%= locals.old && old.first_name ? old.first_name : '' %>">
                                 </div>
                                <!--  <p class="feedback is error">Un error</p>-->
                                <% if (locals.errors && errors.first_name) { %>
@@ -32,7 +33,7 @@
                             <div class="field">
                                 <label for="last_name">Apellido</label>
                                 <div class="control">
-                                    <input type="text" name="last_name" id="last_name" value="">
+                                    <input type="text" name="last_name" id="last_name" value="<%= locals.old && old.last_name ? old.last_name : '' %>">
                                 </div>
                                 <% if (locals.errors && errors.last_name) { %>
                                     <p class="feedback is-danger"><%= errors.last_name.msg %></p>
@@ -42,7 +43,7 @@
                             <div class="field">
                                 <label for="email">Email</label>
                                 <div class="control">
-                                    <input type="text" name="email" id="email" value="">
+                                    <input type="text" name="email" id="email" value="<%= locals.old && old.email ? old.email : '' %>">
                                 </div>
                                 <% if (locals.errors && errors.email) { %>
                                     <p class="feedback is-danger"><%= errors.email.msg %></p>
@@ -69,7 +70,7 @@
                                 <label for="country">Selecciona tu país</label>
                                 <div class="row">
                                     <label for="country">País</label>
-                                    <select name="country" id="country" required>
+                                    <select name="country" id="country" required >
                                         <option value="">Selecciona un país</option>
                                         <option value="arg">Argentina</option>
                                         <option value="bra">Brasil</option>
@@ -86,7 +87,7 @@
                                 <div class="field">
                                     <label for="category">Categoría</label>
                                     <div class="control">
-                                        <select name="category_id" id="category_id">
+                                        <select name="category_id" id="category_id" required>
                                             <option value="">Seleccione una opción</option>
                                             <option value="1">Administrador</option>
                                             <option value="2">Viajero</option>
@@ -96,13 +97,18 @@
                          
                             <div class="field">
                                 <div class="control">
-                                    <input type="submit" value="Registarte">
+                                    <input type="submit" value="Registrate">
                                 </div>
                             </div> 
                         </form>  
+                       
                     </div>
                 </div>
             </section>
+            <br>
+            <form action ="/login" >
+            <p><input type="submit" value="Ya tenes cuenta? inicia sesión"></p>
+        </form>
         </div>
     </main>
 
