--- a/public/css/log.css
+++ b/public/css/log.css
@@ -7,7 +7,7 @@
 
 /* login div */
 .login {
-  background-color:rgb(191, 191, 207);
+  /*  background-color:*/
   width: 420px;
   height: 450px;
   margin: 0 auto;
@@ -17,7 +17,7 @@
 
 /* login header */
 h1 {
-  color:white;
+  color:black;
   text-align: center;
   font-size: 30px;
   padding-top: 10px;
