--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -69,7 +69,7 @@
          
            <br>
             <div class="row">
-                <input type="submit" value="Ingresa" >
+                <input type="submit" value="Ingresa" ><br>
             </div>
         </div>
         
@@ -78,7 +78,12 @@
     <p><input type="submit" href="#" value="Olvidé la contraseña"></p>
     </form> 
     <br>
-    
+<!--     <div>
+        <input type="checkbox" name="Recordarme" ><br>
+         <label for="">Recordarme</label>
+    </div> -->
+
+
 </section>
 
 
