--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -72,16 +72,17 @@
                 <input type="submit" value="Ingresa" ><br>
             </div>
         </div>
+        <div>
+            <input type="checkbox" name="recordarme" ><br>
+             <label for="">Recordarme</label>
+        </div> 
         
     </form>  
     <form action ="/login" >
     <p><input type="submit" href="#" value="Olvidé la contraseña"></p>
     </form> 
     <br>
-<!--     <div>
-        <input type="checkbox" name="Recordarme" ><br>
-         <label for="">Recordarme</label>
-    </div> -->
+   
 
 
 </section>
