--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <%- include('../partials/head.ejs') %>
+<!--     <script src="/js/formulario.js"></script> -->
 </head>
 <body>
     <%- include('../partials/header.ejs') %>
@@ -17,8 +18,14 @@
                         <h1 style="color: black;">Registrate acá!</h1>
                         
 
-                        <form action="/users" method="POST" enctype="multipart/form-data">
-                           
+                        <form action="/users" method="POST" enctype="multipart/form-data" class="form-reservation">
+                        
+                            <!--desde class="form-reservation" dentro del form hasta el div que contiene ul es validacion de js-front  
+                    <div class="errores">
+                               <ul></ul>
+                           </div>
+                            -->
+
                             <div class="field">
                                 <label for="first_name">Nombre</label>
                                 <div class="control">
@@ -173,5 +180,7 @@
 <footer>
     <%- include('../partials/footer.ejs') %>
 </footer>
+
+
 </body>
 </html>
