css - user-login

--- a/src/views/index-admin.ejs
+++ b/src/views/index-admin.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('partials/head.ejs') %>
-    <link rel="stylesheet" href="css/products.css">
+    <link rel="stylesheet" href="css/seccion.css">
 </head>
 <body>
 
@@ -10,18 +10,22 @@
 
         <!-- SECCION ADMINISTRADOR -->
         <hr>
-        <h2> Sección administrador </h2>
-        <ul>
-            <li><a href="/lista">Administrar paquetes </a> </li>
-            <br>
-            <li><a href="/userList">Administrar usuarios</a> </li>
-        </ul>
-        <hr>
+        <h2> SECCIÓN ADMINISTRADOR </h2>
+        <main>
+         <div>
+            <nav class="content-secction">
+                <ul>
+                    <li><a href="/lista">ADMINISTRAS PAQUETES </a> </li>
+                 <br>
+                    <li><a href="/userList">ADMINISTRAR USUARIOS</a> </li>
+                </ul>
+            </nav>
+          </div>
+        </main>
 
 
-    <main>
-  
-</main>
+
+ 
 
     
     <%- include('partials/footer.ejs') %>
