--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -18,7 +18,7 @@
         <div class="product-info">
         <figure>
         <img src="/images/destinos/<%= product.image %>" alt=""/></figure>
-        <h3>#<%= product.id %></h3>
+
        </div>
 
        <div class="product-info">
@@ -31,7 +31,8 @@
             </div>
 
             <div class="itemspaquete"></div>
-            <div>
+           <!--  ESTO NO SIRVE, PONER ITEMS DE CADA PAQUETE EN DESCRIPCION -->
+            <!-- <div>
                 <ul class="lista">
                     <li>Gastronomia</li>
                     <li>Recorrida por los lagos</li>
@@ -39,7 +40,7 @@
                     <li>Mountain tracking</li>
                     <li>Salidas nocturnas</li>
                 </ul>
-            </div>
+            </div> -->
          </article>
      
       
