--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -17,7 +17,7 @@
     <!-- login header -->
     
     <h1 id="header">Ingresá con tu email y contraseña</h1>
-    <form id="form" action="/login" method="POST">
+    <form class="form-login" id="form" action="/login" method="POST">
        <!--antes estaba nombreUsuario y toda su categoria-->
        <!-- <div class="nombreUsuario">
              <label for="nombre"><i class="fas fa-user">Nombre Usuario:</i> </label>
@@ -94,6 +94,6 @@
 <footer>
     <%- include('../partials/footer.ejs') %>
 </footer>
-   
+   <!-- <script src="/js/user-login.js"></script> -->
 </body>
 </html>
