--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,4 +1,12 @@
- 
+/* *{box-sizing: border-box;} */
+
+/* Clases generales */
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
+    
+  }
+
 .header {
     font-size: 20px;
     margin-top: -5%;
@@ -6,7 +14,7 @@
 }
 
   
-a   {
+a {
       color: black;
       /* text-transform:uppercase;*/ 
       /*  font-weight: bold;*/
@@ -27,37 +35,81 @@ a   {
 
 /* box de fotos*/
 
-.container1 {
-
-    /* max-width: 1000px; */
+.container {
+   /* 
+    width: 90%; */
     margin: auto;
     overflow: hidden;
     text-align: center;
     flex-direction: row;
     box-sizing: content-box;
-    
     padding: 5px; 
-      
+   /*SI PONGO ESTO, SE MARCA TMB EL RECUADRO EN EL HEADER:  box-sizing: content-box;
+    box-shadow: 1px 1px 3px black; */
+  
+
+/*    display: flex; con estos se me arma bloque uno al lado del otro y divido a la mitad como debe ser pero se me ven dos productos nomas.
+  
+    box-shadow: 1px 1px 3px black;
+    border-radius: 5px; */
+    
+  /*    */
 }
+.paquete-columna{
+    background-color:#0d47a1;
+    color: #ffffff;
+    margin: 4rem;
+    display: block;
+    box-shadow: 1px 1px 3px black;
+    border-radius: 5px;
+    box-sizing: content-box;
+    
+}
+.paquete-item{
+   
+}
+.paquete-fila{
+   
+}
+.paquete-pic{
+   
+}
+
+/* .paquete-pic {
+ 
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-content: space-around;
+    margin: 0 -.5rem;
+}
+ */
+
+
+
+/*de aca hasta button clases viejas
+
+/* .container-paquete {
+
+    background-color:#0d47a1;
+    overflow: hidden;
+    text-align: center;
+    display: flex;
+}
+
+ */
 
 .pic-container1 {
     display: flex;
-    
     justify-content: space-around;
 
-    /* align-items: flex-end;
-    align-content: flex-end; */
-    /*flex-direction: column;*/
-
-    /*background-color: lightblue;*/
-
-    /* height: 800px; */
     margin: 0 -.5rem;
 }
 
 .pic-item {
     width: calc(100% - 1rem);
-    /* height: 100px; */
+  
     width: 33.33%; 
     background-color:lightblue;
     margin-right: .5rem;
@@ -68,7 +120,7 @@ a   {
 
 .pic-item img { width: 80%; max-height: 300px;}
 
-
+*/
 .button {
     background-size: contain;
 
