--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,9 @@
 
 /* Clases generales */
 
-
+* { box-sizing: border-box; }
 /* Header */
+
 header .container {
     padding: 1rem;
     font-size: 1.2rem;
@@ -11,12 +12,19 @@ header .container {
     justify-content: space-between;
 }
 
-header a { 
+header a, footer a { 
     display: inline-block;
     padding: .5rem;
     margin: .5rem;
 }
 
+.header-center { 
+  display: flex;
+  justify-content: center;
+}
+.header-center img {
+  width: 25%;
+}
 
 header .header-right { display: flex; }
 
@@ -28,8 +36,8 @@ header .header-right { display: flex; }
   position: relative;
   margin: auto;
   background-attachment: scroll;
-  margin-bottom: -1px;
-  margin-top: -1px;
+  margin-bottom: 5px;
+/*   margin-top: -1px; */
   
 }
 
@@ -37,6 +45,10 @@ header .header-right { display: flex; }
 .mySlides {
   display: none;
 }
+/* .mySlides img {
+  width: 100%;
+  height: 250px;
+} */
 
 /* Next & previous buttons */
 .prev, .next {
