--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -18,7 +18,7 @@
                         <h1 style="color: black;">Registrate acá!</h1>
                         
 
-                        <form action="/users" method="POST" enctype="multipart/form-data" class="form-reservation">
+                        <form class="form-reservation" action="/users" method="POST" enctype="multipart/form-data">
                         
                             <!--desde class="form-reservation" dentro del form hasta el div que contiene ul es validacion de js-front  
                     <div class="errores">
