--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,17 +14,20 @@
             <span class="separador">|
             <a href="/" class="vinculo">Inicio</a>
             <span class="separador">|
+
+            <div id ="#guest" >
             <a href="/login" class="vinculo">Ingresá</a>
             <span class="separador">|
             <a href="/register" class="vinculo"> Registrate </a>
-            
+            <div class="bienvenida"> </div>
+            </div>
             <br>
             
             
-            <div>
+            <div class ="#user" style="display:none">
             <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
             <span class="separador">|
-            <a href="/logout" class="close-button"> Cerra sesión</a>
+            <a href="/logout" class="close-button" id="#logoutUser"> Cerra sesión</a>
             </div>
                 
                 <br>
@@ -83,5 +86,6 @@
     <!-- para que funcionen las acciones de next y previos del carrusel-->
     <script src="/js/carousel.js"></script>
     <script src="/js/header.js"></script>
+    <script src="/js/user-login.js"></script>
 </header>
 
