--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -24,7 +24,7 @@
             <br>
             
             
-            <div class ="#user" style="display:none">
+            <div class ="#user" >
             <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
             <span class="separador">|
             <a href="/logout" class="close-button" id="#logoutUser"> Cerra sesión</a>
