--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -46,7 +46,7 @@
 
                         </div>
                     </div>
-                    <div class="paquete-fila">
+                    <div class="paquete-fila" style="font-size: 40px">
                         <h4><%= product.title%></h4>
                         <p><%= product.descrption%></p>
                         <p>ARS $: <%= product.price%></p>
@@ -56,9 +56,11 @@
                     </div>
                 </div>
             </div>
+            <hr>
             <br>
             <% }) %>
      </div>
+     
     </div>
 </section>
 
