--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -49,25 +49,25 @@
   <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
     <img src="/images/pano1.jpg" style="width:100%">
-    <div class="text">Caption One</div>
+    <div class="text">Mendoza</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 4</div>
     <img src="/images/pano4.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
+    <div class="text">Buenos Aires</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 4</div>
     <img src="/images/pano5.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
+    <div class="text">Norte</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
     <img src="/images/pano3.jpg" style="width:100%">
-    <div class="text">Caption Four</div>
+    <div class="text">Calafate</div>
   </div>
 
   <!-- Next and previous buttons -->
