--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -20,21 +20,21 @@
                 
             <p class= "compra" style= "font-size: 25px">  Reservá solo con tu tarjeta de crédito</p>
             <br>
-            <div class ="methods" style="font-size: 35px; text-align: center;"> 
-                <a class="fab fa-cc-mastercard"> </a>
-                <a class="fab fa-cc-paypal"> </a>
-                <a class="fab fa-cc-amex"> </a>
-                <a class="fab fa-cc-visa"> </a>
+            <div class ="methods" style="font-size:30px; text-align: center;"> 
+                <a class="fab fa-cc-mastercard" style="font-size:40px"> </a>
+                <a class="fab fa-cc-paypal" style="font-size:40px"> </a>
+                <a class="fab fa-cc-amex" style="font-size:40px"> </a>
+                <a class="fab fa-cc-visa" style="font-size:40px"> </a>
             </div>
         </div> 
         <br>
   <hr>
         <div class= "resumen">
-            <h2> Resumen de tus reservas</h2>
+            <h2 style="font-size: 40px;"> Resumen de tus reservas</h2>
                             
            <div class ="detail">
             <p>
-                <ul>
+                <ul style="text-align: left">
                     <li> <a href ="#"> Item 1 </a><p>Descripción</p></li>
                     <li> <a href ="#"> Item 2 </a><p>Descripción</p></li>
                     <li> <a href ="#"> Item 3 </a><p>Descripción</p></li>
