--- a/public/css/products.css
+++ b/public/css/products.css
@@ -56,7 +56,7 @@ a {
   /*    */
 }
 .paquete-columna{
-    background-color:#0d47a1;
+  /*  */  background-color:#0d47a1;
     color: #ffffff;
     margin: 4rem;
     display: block;
