--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -41,7 +41,7 @@
             <div class="paquete-columna">
                 <div class="paquete-item">
                     <div class="paquete-fila">
-                        <div class="paqueta-pic">
+                        <div class="paquete-pic" >
                            <a href="/lista/<%= product.id%>"><img src="images/destinos/<%=product.image%>" alt="picture"></a>
 
                         </div>
