--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -60,7 +60,7 @@
             <div class="field">
                 <label for="category">Categoría</label>
                 <div class="control">
-                    <select name="category_id" id="category_id" >
+                    <select name="category_id" id="category_id" required>
                         <option value="">Seleccione una opción</option>
                         <option name="2" value="2">Viajero</option>
                         <option name="1" value="1">Administrador</option>
