--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -91,7 +91,7 @@
                                 <div class="field">
                                     <label for="category">Categoría</label>
                                     <div class="control">
-                                        <select name="category_id" id="category_id">
+                                        <select name="category_id" id="category_id" required>
                                             <option value="">Seleccione una opción</option>
                                             <option value="1">Administrador</option>
                                             <option value="2">Viajero</option>
