--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -22,7 +22,7 @@
                                 <div class="control">
                                     <input type="text" name="first_name" id="first_name" value="<%= users.first_name %>">
                                 </div>
-                                <p class="feedback is error">Un error</p>
+                                <p class="feedback is error"></p>
                             </div>
 
                             <div class="field">
