--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,14 +3,14 @@
 
       <div class="header-left">
         <div class="header header-center">
-          <img src="/images/gif.gif" alt="logo" style="width: 50%;">
+          <a href="/"><img src="/images/gif.gif" alt="logo" style="width: 50%;"></a> 
         </div>
       </div>
       <div class="top">
 
       <div class="header header-right">
           <nav>
-            <h3 class="color-h3"> Bienvenid@:  <%= ( user ? user.first_name : "visitante") %> <i class="fas fa-plane-departure"></i></h3>
+           <!-- ojo --> <h1> Bienvenid@:  <%= ( user ? user.first_name : "visitante") %> <i class="fas fa-plane-departure"></i></h1>
             <span class="separador">|
             <a href="/" class="vinculo">Inicio</a>
             <span class="separador">|
