--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,7 +10,9 @@
 
       <div class="header header-right">
           <nav>
-           <!-- ojo --> <h1> Bienvenid@:  <%= ( user ? user.first_name : "visitante") %> <i class="fas fa-plane-departure"></i></h1>
+           <!-- ojo --> <h1> Bienvenid@:  <%= ( user ? user.first_name : "visitante") %>  
+            <i class="fas fa-plane-departure"></i></h1>
+           
             <span class="separador">|
             <a href="/" class="vinculo">Inicio</a>
             <span class="separador">|
