--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -17,7 +17,7 @@
     <!-- login header -->
     
     <h1 id="header">Ingresá con tu email y contraseña</h1>
-    <form class="form-login" id="form" action="/login" method="POST">
+    <form class="form-login" id="form-login" action="/login" method="POST">
        <!--antes estaba nombreUsuario y toda su categoria-->
        <!-- <div class="nombreUsuario">
              <label for="nombre"><i class="fas fa-user">Nombre Usuario:</i> </label>
@@ -78,6 +78,7 @@
         </div> 
         
     </form>  
+
     <form action ="/login" >
     <p><input type="submit" href="#" value="Olvidé la contraseña"></p>
     </form> 
@@ -94,6 +95,6 @@
 <footer>
     <%- include('../partials/footer.ejs') %>
 </footer>
-   <!-- <script src="/js/user-login.js"></script> -->
+   <script src="/js/user-login.js"></script>
 </body>
 </html>
