--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/footer2.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/log.css">
     <link rel="stylesheet" href="/css/products.css">
