--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,100 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>  
-    <%- include('../partials/head.ejs') %>
-</head>
+    <head>  
+        <%- include('../partials/head.ejs') %>
+    </head>
 
-<header> 
-    <%- include('../partials/header.ejs') %>  
-   
-</header>
-
-<body>
-    <div class="container">
-    <section>
-    <!-- login div -->
-    <div class="login">
-    <!-- login header -->
+    <header> 
+        <%- include('../partials/header.ejs') %>  
     
-    <h1 id="header">Ingresá con tu email y contraseña</h1>
-    <form class="form-login" id="form-login" action="/login" method="POST">
-       <!--antes estaba nombreUsuario y toda su categoria-->
-       <!-- <div class="nombreUsuario">
-             <label for="nombre"><i class="fas fa-user">Nombre Usuario:</i> </label>
-             <input type="text" name="nombre-usuario" id="nombre" placeholder="Ingrese nombre de usuario aquí">
-        </div>-->
-        <!--llega hasta aca-->
-        <!--EMAIL ES LO NUEVO-->
-        <div class="email">
-            <label for="email"><i class="fas fa-user "></i> Email</label>
-            <div class="control">
-                <input type="text" name="email" id="email" placeholder="juan@ejemplo.com" value="<%= locals.old && old.email ? old.email : '' %>">
-            </div>
-            <% if (locals.errors && errors.email) { %>
-                <p class="feedback is-danger"><%= errors.email.msg %></p>
-            <% } %>
-        </div>
+    </header>
 
-
-        <!--ANTES ERA ESTO -->
-       <!-- <div class="contraseñaUsuario">
-             <label for="clave"><i class="fas fa-key"></i> Contraseña:</label>
-             <input type="password" name="clave" id="clave" placeholder="Ingrese su contraseña aquí">
-        </div>-->
-        <!--AHORA ES ESTO-->
-
-        <div class="password">
-            <label for="password"><i class=" fas fa-key "></i> Password</label>
-            <div class="control">
-               <input type="password" name="password" id="password" placeholder="">
-            </div>
-             <% if (locals.errors && errors.password) { %>
-             <p class="feedback is-danger"><%= errors.password.msg %></p>
-             <% } %>
-        </div>
-
-        <!--HASTA ACA y aca poner el if de errores para poder validar en value el old.name-->
-    
-     <div class="user-type">
-            <p>Perfil de usuario:</p>
-            <div class="field">
-                <label for="category">Categoría</label>
-                <div class="control">
-                    <select name="category_id" id="category_id" required>
-                        <option value="">Seleccione una opción</option>
-                        <option name="2" value="2">Viajero</option>
-                        <option name="1" value="1">Administrador</option>
-                    </select>
-                </div>
-         
-           <br>
-            <div class="row">
-                <input type="submit" value="Ingresa" ><br>
-            </div>
-        </div>
-        <div>
-            <input type="checkbox" name="recordarme" ><br>
-             <label for="">Recordarme</label>
-        </div> 
+    <body>
+        <div class="container">
+            <section>
+                <div class="login">
+                    <h1 id="header">Ingresá con tu email y contraseña</h1>
+                        <!-- LOGIN FORM -->
+                        <form class="form-login" id="form-login" action="/login" method="POST">
         
-    </form>  
+                            <div>
+                                <label for="email"><i class="fas fa-user "></i> Email</label>
+                                    <div class="control">
+                                        <input type="text" name="email" id="email" placeholder="juan@ejemplo.com" value="<%= locals.old && old.email ? old.email : '' %>">
+                                    </div>
+                                    <!-- Errores back -->
+                                    <% if (locals.errors && errors.email) { %>
+                                        <p class="feedback is-danger"><%= errors.email.msg %></p>
+                                    <% } %>
+                                    <!-- Errores front -->
+                                    <div class= "errorEmail errorMensaje"></div>
+                            </div>
 
-    <form action ="/login" >
-    <p><input type="submit" href="#" value="Olvidé la contraseña"></p>
-    </form> 
-    <br>
-   
+                            <div>
+                                <label for="password"><i class=" fas fa-key "></i> Password</label>
+                                    <div class="control">
+                                        <input type="password" name="password" id="password" placeholder="">
+                                    </div>
+                                    <% if (locals.errors && errors.password) { %>
+                                    <p class="feedback is-danger"><%= errors.password.msg %></p>
+                                    <% } %>
 
+                                    <div class= "errorPassword errorMensaje"></div>
+                            </div>
 
-</section>
+                            <div class="user-type">
+                                    <p>Perfil de usuario:</p>
+                                    <div class="field">
+                                        <label for="category">Categoría</label>
+                                        <div class="control">
+                                            <select name="category_id" id="category_id" >
+                                                <option value="">Seleccione una opción</option>
+                                                <option name="2" value="2">Viajero</option>
+                                                <option name="1" value="1">Administrador</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                            <br>
 
+                            <div class="row">
+                                <input type="submit" value="Ingresa" ><br>
+                            </div>
+                            
+                            <br>
+                            
+                            <div>
+                                <input type="checkbox" name="recordarme" ><br>
+                                    <label for="">Recordarme</label>
+                            </div> 
+            
+                        </form>  
+                        <!-- END LOGIN FORM -->
+                        <!-- FORGET PW -->
+                        <form action ="/login" >
+                        <p><input type="submit" href="#" value="Olvidé la contraseña"></p>
+                        </form> 
+                        <br>
+                        <!-- ENDFORGET PW -->
+                    </section>
 
-<form action ="/register" >
-    <p><input type="submit" value="No tenes cuenta? Registrate acá!"></p>
-    </form> 
-<footer>
-    <%- include('../partials/footer.ejs') %>
-</footer>
-   <script src="/js/user-login.js"></script>
-</body>
+                    <!-- REGISTER -->
+                    <form action ="/register" >
+                        <p><input type="submit" value="No tenes cuenta? Registrate acá!"></p>
+                    </form> 
+                    <!-- END REGISTER -->
+                    
+        <footer>
+            <%- include('../partials/footer.ejs') %>
+        </footer>
+         <script src="../../../public/js/user-log.js"></script>
+         <script src="../js/details.js"></script> 
+    </body>
 </html>
